Huddle/bugfix gallery link alignment (#377)
* UWM-HUD: Remove unnecessary lightning yml

* UWM-HUD: Fix alignment for 'the gallery' link

--- a/docroot/themes/custom/uwmed_bootstrap/scss/_breakpoint_desktop.scss
+++ b/docroot/themes/custom/uwmed_bootstrap/scss/_breakpoint_desktop.scss
@@ -1879,6 +1879,9 @@ article.webform {
     margin-left: auto;
     margin-right: auto;
   }
+  .more-link {
+    left: 880px;
+  }
   .view-uwm-galleries {
     min-height: 1px;
     @include clearfix();
